2002-06-25  H.J. Lu <hjl@gnu.org>

	* Makefile.am (check-DEJAGNU): Set LC_ALL=C and export it.
	* Makefile.in: Regenerated.

2002-06-20  Nick Clifton  <nickc@cambridge.redhat.com>

	* ld.texinfo (Bug Reporting): Update text to suggest a limit on
	the size of attached object files, to allow make the object files
	available via FTP or HTTP and to mention that the mail will be
	sent to a mailing list.

2002-06-20  Nathanael Nerode  <neroden@twcny.rr.com>

	* ld/configure.host (romp): Drop support.

2002-06-18  Chris Demetriou  <cgd@broadcom.com>

	* emultempl/mipself.em (mips_elf${ELFSIZE}_check_sections): Check
	section flags for SEC_DATA, rather than for SEC_CODE being unset.

2002-06-18  Chris Demetriou  <cgd@broadcom.com>

	* emultempl/mipself.em (mips_elf${ELFSIZE}_check_sections): Fix
	format specifier used to print BFD name.

2002-06-18  Dave Brolley  <brolley@redhat.com>

	From Catherine Moore, Michael Meissner, Jim Blandy:
	* emulparams/elf32frv.sh: New file.
	* configure.tgt: Support frv-*-*.
	* Makefile.am (ALL_EMULATIONS): Add eelf32frv.o.
	(eelf32frv.c): New target.

2002-06-17  Tom Rix  <trix@redhat.com>

	* emultempl/elf32.em: gld*_get_script:  Check for 
	GENERATE_COMBRELOC_SCRIPT.
	* scripttempl/elfd10v.sc : Fix STACK and INSN.
	* emulparams/d10velf.sh : Fix TEXT_START_ADDR.

Thu Jun 13 20:18:38 2002  J"orn Rennecke <joern.rennecke@superh.com>

	* configure.tgt: Add support for sh[1234]*le*-*-elf, sh[1234]*-*-elf.

2002-06-12  H.J. Lu <hjl@gnu.org>

	* emultempl/elf32.em (gld${EMULATION_NAME}_try_needed): Return
	false if xvec doesn't match.

2002-06-10  Richard Sandiford  <rsandifo@redhat.com>

	* ldlang.c (lang_size_sections_1): Skip removed output sections.

2002-06-08  Alan Modra  <amodra@bigpond.net.au>

	* ldexp.c: Replace CONST with const.
	* ldfile.c: Likewise.
	* ldfile.h: Likewise.
	* ldlex.l: Likewise.
	* mri.c: Likewise.
	* pe-dll.h: Likewise.

2002-06-07  Alan Modra  <amodra@bigpond.net.au>
