@@ -1,3 +1,7 @@
+2002-06-26  Alan Modra  <amodra@bigpond.net.au>
+
+	* ldmisc.c (demangle): Restore dots stripped from sym name.
+
 2002-06-25  H.J. Lu <hjl@gnu.org>
 
 	* Makefile.am (check-DEJAGNU): Set LC_ALL=C and export it.
